# strands-lab-aws

./: .env.example  .gitignore  README.md  cli.py  cli_config.py  cli_stream_renderer.py  create_dynamo_table.py  env_bootstrap.py  handler.py  plan.md  pyproject.toml  requirements.txt  sample_agent.py  template.yaml  utils.py
agents/: football.py  orcehstrator.py  quiz.py  tutor.py
data/: teams.json
debug/: debug_fotmob_fetches.py  debug_general.py  debug_playwright.py  jobspy_playground.py
scrapers/: browser.py  fotmob.py
services/: fotmob.py  job_swarm.py  orchestrator.py
tests/: README.md  conftest.py  orchestrator_dynamodb_test.py  orchestrator_test.py  quiz_test.py  test_fetch_matches.py  test_fotmob_scraper.py  test_fotmob_tools.py  tutor_test.py
tools/: orchestrator_tools.py  session.py  state.py
