[project]
name = "strands-lab-aws"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "strands-agents",
    "python-dotenv",
    "strands-agents-tools",
    "strands-agents-builder",
    "playwright",
    "prompt-toolkit"
]

[project.scripts]
install-browsers = "playwright._impl._driver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]
